# colibri

./: CMakeLists.txt  Messages.sh  NEWS  README  RELEASE_CHECK_LIST  buildconfig.h.in
app/: CMakeLists.txt  about.h  colibri_autostart.desktop  config.kcfg  config.kcfgc  hlayout.cpp  hlayout.h  label.cpp  label.h  main.cpp  notificationmanager.cpp  notificationmanager.h  notificationwidget.cpp  notificationwidget.h  org.freedesktop.Notifications.service.in
kcm/: CMakeLists.txt  alignmentselector.cpp  alignmentselector.h  colibri.desktop  colibrimodule.cpp  colibrimodule.h  controlmodule.cpp  controlmodule.h  controlmodule.ui
po/: CMakeLists.txt  TRANSLATORS  colibri.pot  cs.po  de.po  es.po  i18n.sh  it.po  pt_BR.po  ru.po  sk.po  tr.po
tests/: append.sh  duplicate.sh  icon.sh  longtext.sh  newline.sh  notify.py  test-replaceid
